# uniinfo-editor

./: .gitignore  LICENSE  README.md  pyproject.toml  uniinfo_editor.py
src/uniinfo_editor/: __init__.py
