[project]
name = "uniinfo-editor"
version = "2.0.0"
description = "University Information Editor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    #data-checker,
    "click-repl>=0.3.0",
    "prompt-toolkit>=3.0.51",
    "py-yaml12>=0.1.0",
    "rich>=14.1.0",
    "wenjuanxing-parser>=0.2.0b1",
]

[project.scripts]
uniinfo_editor = "uniinfo_editor:run"

[project.optional-dependencies]
plugin = [
    "data-checker @ git+https://github.com/CollegesChat/data-checker",
]

[tool.uv.workspace]
members = ["university-information/questionnaires/dist"]
exclude = [
  "university-information",
]

# [tool.uv.sources]
# data-checker = { path = "../data-checker" }

[tool.ty.environment]
python = "./.venv"
root = ['src']

[tool.ty.rules]
invalid-assignment = "ignore"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "viztracer>=1.1.1",
]

